1.5.8
-----
(RB=96060)
Add doc and Javadoc of source resource class name to generated idl and client builder.

(RB=96333)
Allow http status code be specified in GET methods and Action methods. For GET, define custom GET method (by annotating
with @RestMethod.Get) with return type GetResult<V>. For Action, define the action method with return type
ActionResult<V>.

1.5.7
-----
(RB=96131)
Fix NPE in RestRequestBuilderGenerator when processing legacy IDL format.

1.5.6
-----
(RB=95037)
Generated rest client builders now contain Javadoc extracted from .restspec.json files.
Such document originally comes from the Javadoc of corresponding resource classes.

1.5.5
-----
(RB=94738)
Add consistency check between SSLContext and SSLParameters arguments
of HttpNettyClient constructor.

(RB=95371)
Deprecate RestLiConfig.setClassLoader().  RestLi now loads resource
classes using the current thread's contextClassLoader.

1.5.4
-----
(RB=93597)
Enhance JSR330Adapter to support injection via constructor arguments,
allowing a safer coding practice of declaring final member variables
in rest.li resources.

(RB=92918)
RestLiResourceModelExporter now returns a GeneratorResult of files modified/created so it is more consistent with the
other generator classes.

1.5.3
-----
(RB=93836)
Detect class name conflicts that occur when a generated class name
is the same as the class name for a NamedDataSchema.
Also clean up DataTemplateGenerator code.
Array items and map values of generated classes is always the
the first schema with custom Java binding or the fully
dereferenced schema if there is no custom Java binding.

1.5.2
-----
(RB=92697)
Add SSL support to R2 http client.

1.5.1
-----
(RB=93099)
Remove cow.

1.5.0
-----
(RB=93107)
Fix bug of JMX bean

(RB=93024)
Follow on change to remove old Rpc code in data.

(RB=93011)
Fix javadoc, imports, syntactical changes in data.

(RB=92227)
Remove support for RpcEndpointGenerator and ExceptionTemplates - this functionality has been